<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_member_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_member"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/edit_delete_members_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_delete_members"
        app:layout_constraintTop_toBottomOf="@id/add_member_button"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/manage_books_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_books"
        app:layout_constraintTop_toBottomOf="@id/edit_delete_members_button"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/view_requests_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_requests"
        app:layout_constraintTop_toBottomOf="@id/manage_books_button"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
